@@ -1,3 +1,4 @@
 _build
 _tests
 *.native
+*.byte
