@@ -2,3 +2,4 @@ true: warn(@5@8@10@11@12@14@23@24@26@29), bin_annot, safe_string
 
 "lib": include
 "unix": include
+"src": include
