@@ -1,0 +1,1 @@
+<*.*>: package(ctypes.stubs), use_errno_stubs
