@@ -1,0 +1,3 @@
+bin: [
+  "?_build/src/errno_map.byte" {"errno-map"}
+]
